@@ -25,7 +25,8 @@ tag_svn_revision = 1
 #pytz = False
 #dateutil = False
 #
-## Experimental config package support:
+## Experimental config package support, this should only be enabled by
+## matplotlib developers, for matplotlib development
 #enthought.traits = False
 #configobj = False
 
